add en language for project

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,12 +15,12 @@
     "heading": "About Me",
     "title": "Main information about me",
     "desc": " Hi there...I'm a ",
-    "intro1": "Hi, my name is",
-    "subIntro1": "Thanh Dat",
+    "intro-1": "Hi, my name is",
+    "subIntro-1": "Thanh Dat",
     "intro1-1": ". I was originally a refrigeration engineer from University of Science and Technology, but I have a passion for programming so I want to pursue the path that I love.",
-    "intro2": "I'm known as a detail-oriented and good communicator employee. I never miss deadlines and can take multiple tasks at once.I have the ability to work independently as well as effectively in a team. My hobbies are reading book, coding, play soccer and listening to music. Sometimes I like to go out drinking with my colleagues",
-    "intro3": " Right now I don't have much experience, so I would like to apply for the position of intern/fresher Frontend Developer to explore new dimensions and for the further development of my skills. My short term goal is that I  want to be a part of a Frontend team, to build products that can show my skills, grow my career and my goal for the next two years is to be a Senior Frontend Developer.",
-    "intro4": "That's my introduction. Thanks for reading.",
+    "intro-2": "I'm known as a detail-oriented and good communicator employee. I never miss deadlines and can take multiple tasks at once.I have the ability to work independently as well as effectively in a team. My hobbies are reading book, coding, play soccer and listening to music. Sometimes I like to go out drinking with my colleagues.",
+    "intro-3": " Right now I don't have much experience, so I would like to apply for the position of intern/fresher Frontend Developer to explore new dimensions and for the further development of my skills. My short term goal is that I  want to be a part of a Frontend team, to build products that can show my skills, grow my career and my goal for the next two years is to be a Senior Frontend Developer.",
+    "intro-4": "That's my introduction. Thanks for reading.",
     "birthday": "Birthday:",
     "myBirthday": "24.05.1997",
     "gender": "Gender:",
@@ -30,5 +30,87 @@
     "github": "Github:",
     "myGithub": "github.com/Thanhdat013",
     "download": "Download CV"
+  },
+  "skill": {
+    "heading": "My Skill",
+    "title": "All my skills",
+    "frontendSkill": "Front-end skills",
+    "frontendSkill-1": "Ability responsive web design and development follow template.",
+    "frontendSkill-2": "Proficiency in HTML, CSS(SCSS).",
+    "frontendSkill-3": "Programming language: Javascript, Typescript.",
+    "frontendSkill-4": " Framework/Library: React.js, Next.js,Bootstrap,Tailwind, Antd.",
+    "backendSkill": "Back-end skills",
+    "backendSkill-1": " Thorough under standing of Docker, mySql, RESTful APIs.",
+    "otherSkill": "Other skills",
+    "otherSkill-1": "Proficient use of source code management tools: GIT.",
+    "otherSkill-2": "Ability to learn and apply new technology.",
+    "otherSkill-3": "Assessed UX and UI designs for technical feasibility.",
+    "otherSkill-4": "Ability to read and understand specialized English documents.",
+    "softSkill": "Soft Skills",
+    "softSkill-1": "Communication Skills.",
+    "softSkill-2": "Teamwork & Collaboration Abilities.",
+    "softSkill-3": "Computer Skills: word, excel, power point...",
+    "softSkill-4": "Ability to work independently and as part of a team.",
+    "softSkill-5": "Strong time management skills and ability to prioritize tasks."
+  },
+  "project": {
+    "heading": "My Project",
+    "title": "Project done",
+    "seeMore": "See more",
+    "name": "Project:",
+    "desc": "Description:",
+    "frontend": "Frontend:",
+    "backend": "Backend:",
+    "member": "Number of member:",
+    "role": "Role:",
+    "demo": "Demo:",
+    "github": "Github: ",
+    "myGithub": "https://github.com/Thanhdat013",
+    "footer": "© Copyright 2023. All Rights are Reserved."
+  },
+  "detailProject": {
+    "project-1": {
+      "title": "Website clone Tiki.",
+      "shortDescription": "E-commerce website supports users to buy books through websites and mobile app.",
+      "description": "Build an e-commerce website to sell books online, where users can easily access, search and buy their desired books.",
+      "frontend": "React.Js, Redux Toolkit, Ant Design, SCSS.",
+      "backend": "Node.js, MongDB.",
+      "role": "Development.",
+      "demo": "https://reactjs-frontend.thanhdat-tiki.click/",
+      "github": "https://github.com/Thanhdat013/Clone_Tiki"
+    },
+    "project-2": {
+      "title": "Basic portfolio.",
+      "shortDescription": "A simple personal portfolio resume to introduce yourself.",
+      "description": "Build a simple personal resume to introduce yourself with personal information, projects done and blog posts.",
+      "frontend": "Next.Js (TypeScript), Material UI v5.",
+      "backend": "RESTful API. ",
+      "role": "Development.",
+      "demo": "https://nextjs-basic-kappa-eight.vercel.app/",
+      "github": "https://github.com/Thanhdat013/Nextjs-basic"
+    },
+    "project-3": {
+      "title": "Website for  quizzes.",
+      "shortDescription": "A website that makes quizzes with many different topics.",
+      "description": "Build a website for assessment quizzes, where users can easily access and choose from different topics.",
+      "frontend": "React.Js (Javascript), Redux, Bootstrap",
+      "backend": "Node.js, Docker",
+      "role": "Development.",
+      "demo": "",
+      "github": "https://github.com/Thanhdat013/React_Quiz-test"
+    }
+  },
+
+  "contact": {
+    "heading": "Contact Me",
+    "linkedin": "Linkedin:",
+    "myLinkedin": "https://www.linkedin.com/in/Thanhdat",
+    "email": "Email:",
+    "myEmail": "kimthanhdat0510@gmail.com",
+    "phone": "Phone:",
+    "myPhone": "+84 338 575 296",
+    "github": "Github:",
+    "myGithub": "https://github.com/Thanhdat013",
+    "footer": "© Copyright 2023. All Rights are Reserved."
   }
 }
