add feature of project

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -40,7 +40,7 @@
     "frontendSkill-1": "Ability responsive web design and development follow template.",
     "frontendSkill-2": "Proficiency in HTML, CSS(SCSS).",
     "frontendSkill-3": "Programming language: Javascript, Typescript.",
-    "frontendSkill-4": "Framework/Library: React.js, Next.js,Bootstrap,Tailwind, Antd.",
+    "frontendSkill-4": "Framework/Library: React.js, Next.js, Bootstrap, Tailwind, Antd.",
     "backendSkill": "Back-end skills",
     "backendSkill-1": "Knowledge of Docker, mySql, RESTful APIs.",
     "otherSkill": "Other skills",
@@ -57,14 +57,15 @@
   "project": {
     "heading": "My Project",
     "title": "Project done",
+    "feature": "Features: ",
     "seeMore": "See more",
     "name": "Project:",
     "desc": "Description:",
     "frontend": "Frontend:",
     "backend": "Backend:",
     "member": "Number of member:",
-    "role": "Role:",
-    "demo": "Demo:",
+    "role": "Role: ",
+    "demo": "Demo: ",
     "github": "Github: ",
     "myGithub": "https://github.com/Thanhdat013"
   },
@@ -73,6 +74,13 @@
       "title": "Website clone Tiki.",
       "shortDescription": "E-commerce website supports users to buy books on websites and phone.",
       "description": "Build an e-commerce website to sell books online, where users can easily access, search and buy their desired books.",
+      "feature_1": "Login, register, save user data and user authorization.",
+      "feature_2": "Search products by name, filter products by price range, category, quantity.",
+      "feature_3": "Manage, add, remove products in the shopping cart according to user data.",
+      "feature_4": "Manage, display, paginate all users, add, update and delete users.",
+      "feature_5": "Manage, display, paginate all products, add, update and delete products.",
+      "feature_6": "Import, export data users.",
+      "feature_7": "Responsive: support on multiple screens.",
       "frontend": "React.Js, Redux Toolkit, Ant Design, SCSS.",
       "backend": "Node.js, MongDB.",
       "role": "Development.",
@@ -83,6 +91,10 @@
       "title": "Basic portfolio.",
       "shortDescription": "A simple personal portfolio resume to introduce yourself.",
       "description": "Build a simple personal resume to introduce yourself with personal information, projects done and blog posts.",
+      "feature_1": "Login, register, save user data.",
+      "feature_2": "Display blog posts and view details of blog posts based on blog post params.",
+      "feature_3": "Display, paginate all jobs done.",
+      "feature_4": "Responsive: support on multiple screens.",
       "frontend": "Next.Js (TypeScript), Material UI v5.",
       "backend": "RESTful API. ",
       "role": "Development.",
@@ -93,6 +105,13 @@
       "title": "Website for  quizzes.",
       "shortDescription": "A website that makes quizzes with many different topics.",
       "description": "Build a website for assessment quizzes, where users can easily access and choose from different topics.",
+      "feature_1": "Login, register, save user data and user authorization.",
+      "feature_2": "Manage, display, paginate all users, add, update and delete users.",
+      "feature_3": "Manage, display, paginate all quizzes, add, update, delete and assign quizzes to users.",
+      "feature_4": "Manage, display, add, update and delete questions and answers with corresponding quiz.",
+      "feature_5": "Take a timed quiz, display answers, number of correct answers after taking the quiz.",
+      "feature_6": "English and Vietnamese language options.",
+      "feature_7": "Responsive: support on multiple screens.",
       "frontend": "React.Js (Javascript), Redux, Bootstrap",
       "backend": "Node.js, Docker",
       "role": "Development.",
