--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -57,6 +57,7 @@
   "project": {
     "heading": "Dự án của tôi",
     "title": "Các dự án đã hoàn thành",
+    "feature": "Tính năng: ",
     "seeMore": "Xem thêm",
     "name": "Dự án:",
     "desc": "Miêu tả:",
@@ -73,6 +74,13 @@
       "title": "Trang web bán sách online.",
       "shortDescription": "Website thương mại điện tử hỗ trợ người dùng mua sách trên trang web và điện thoại.",
       "description": "Xây dựng website thương mại điện tử bán sách trực tuyến, nơi người dùng có thể dễ dàng truy cập, tìm kiếm và mua những cuốn sách mình mong muốn.",
+      "feature_1": "Đăng nhập, đăng ký, lưu dữ liệu người dùng và phân quyền người dùng.",
+      "feature_2": "Tìm kiếm sản phẩm theo tên, lọc sản phẩm theo khoảng giá, danh mục, số lượng.",
+      "feature_3": "Quản lý, thêm bớt sản phẩm trong giỏ hàng theo dữ liệu người dùng.",
+      "feature_4": "Quản lý, hiển thị, phân trang tất cả người dùng , thêm, cập nhật và xóa người dùng.",
+      "feature_5": "Quản lý, hiển thị, phân trang tất cả sản phẩm, thêm, cập nhật và xóa sản phẩm.",
+      "feature_6": "Nhập, xuất dữ liệu người dùng.",
+      "feature_7": "Responsive: hỗ trợ trên nhiều màn hình.",
       "frontend": "React.Js, Redux Toolkit, Ant Design, SCSS.",
       "backend": "Node.js, MongDB.",
       "role": "Nhà phát triển.",
@@ -83,6 +91,10 @@
       "title": "Danh mục cá nhân đơn giản.",
       "shortDescription": "Một danh mục cá nhân đơn giản để giới thiệu bản thân.",
       "description": "Xây dựng một danh mục cá nhân đơn giản để giới thiệu bản thân với thông tin cá nhân, các dự án đã thực hiện và các bài đăng trên blog.",
+      "feature_1": "Đăng nhập, đăng ký, lưu dữ liệu người dùng.",
+      "feature_2": "Hiện thị các bài blog và xem chi tiết các bài blog dựa trên params của bài blog",
+      "feature_3": "Hiển thị, phân trang tất cả các công việc tưng làm .",
+      "feature_4": "Responsive: hỗ trợ trên nhiều màn hình.",
       "frontend": "Next.Js (TypeScript), Material UI v5.",
       "backend": "RESTful API. ",
       "role": "Nhà phát triển.",
@@ -93,6 +105,13 @@
       "title": "Trang web cho các câu đố.",
       "shortDescription": "A website that makes quizzes with many different topics.",
       "description": "Xây dựng một trang web cho các câu đố đánh giá, nơi người dùng có thể dễ dàng truy cập và lựa chọn từ các chủ đề khác nhau.",
+      "feature_1": "Đăng nhập, đăng ký, lưu dữ liệu người dùng và phân quyền người dùng.",
+      "feature_2": "Quản lý, hiển thị, phân trang tất cả người dùng, thêm, cập nhật và xóa người dùng.",
+      "feature_3": "Quản lý, hiển thị, phân trang tất cả bài quiz, thêm, cập nhật, xóa và gán bài quiz cho người dùng.",
+      "feature_4": "Quản lý, hiển thị, thêm, cập nhật và xóa câu hỏi, câu tả lời với bài quiz tương ứng.",
+      "feature_5": "Chức năng làm bài quiz có tính giờ, hiển thị đáp án, số lượng câu trả lời chính xác sau khi lam bài quiz",
+      "feature_6": "Tùy chọn ngôn ngữ tiếng Anh và tiếng Việt.",
+      "feature_7": "Responsive: hỗ trợ trên nhiều màn hình.",
       "frontend": "React.Js (Javascript), Redux, Bootstrap.",
       "backend": "Node.js, Docker.",
       "role": "Nhà phát triển.",
