--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -20,7 +20,7 @@
     "intro1-1": ". Mình vốn là một kỹ sư điện lạnh của trường Đại học Bách khoa, nhưng mình có niềm đam mê lập trình nên mình muốn theo đuổi con đường mà mình yêu thích.",
     "intro-2": "Mình được biết đến như một nhân viên giao tiếp tốt và định hướng chi tiết. Mình không bao giờ trễ deadline và có thể đảm nhận nhiều nhiệm vụ cùng một lúc. Mình có khả năng làm việc độc lập cũng như làm việc nhóm hiệu quả. Sở thích của mình là đọc sách, viết code, chơi bóng đá và nghe nhạc. Đôi khi mình thích ra ngoài uống rượu với đồng nghiệp của mình ^^.",
     "intro-3": "Hiện tại, mình không có nhiều kinh nghiệm, vì vậy mình muốn ứng tuyển vào vị trí Intern/Fresher Frontend mới hơn để khám phá các khía cạnh mới và để phát triển hơn nữa các kỹ năng của mình. Mục tiêu ngắn hạn của mình là mình muốn trở thành một phần của nhóm Frontend, để xây dựng các sản phẩm có thể thể hiện kỹ năng của mình, phát triển sự nghiệp và mục tiêu dài hạn của mình  là trở thành Senior Frontend cấp cao.",
-    "intro-4": "Đó là phần giới thiệu của tôi. Cảm ơn vì đã đọc.",
+    "intro-4": "Đó là phần giới thiệu của mình. Cảm ơn vì đã đọc.",
     "name": "Họ và tên:",
     "myName": "Kim Thành Đạt",
     "birthday": "Ngày sinh:",
@@ -34,7 +34,7 @@
     "download": "Tải CV"
   },
   "skill": {
-    "heading": "Kỹ năng của tôi",
+    "heading": "Kỹ năng của mình",
     "title": "Tất cả các kỹ năng của tối",
     "frontendSkill": "Các kỹ năng Front-end",
     "frontendSkill-1": "Có khả năng thiết kế và phát triển web responsive theo mẫu.",
@@ -55,7 +55,7 @@
     "softSkill-5": "Kỹ năng quản lý thời gian tốt và khả năng sắp xếp thứ tự ưu tiên cho các nhiệm vụ.."
   },
   "project": {
-    "heading": "Dự án của tôi",
+    "heading": "Dự án của mình",
     "title": "Các dự án đã hoàn thành",
     "feature": "Tính năng: ",
     "seeMore": "Xem thêm",
@@ -84,7 +84,7 @@
       "frontend": "React.Js, Redux Toolkit, Ant Design, SCSS.",
       "backend": "Node.js, MongDB.",
       "role": "Nhà phát triển.",
-      "demo": "https://reactjs-frontend.thanhdat-tiki.click/",
+      "demo": "https://reactjs-frontend.thanhdat-tiki.click",
       "github": "https://github.com/Thanhdat013/Clone_Tiki"
     },
     "project-2": {
@@ -98,31 +98,29 @@
       "frontend": "Next.Js (TypeScript), Material UI v5.",
       "backend": "RESTful API. ",
       "role": "Nhà phát triển.",
-      "demo": "https://nextjs-basic-kappa-eight.vercel.app/",
+      "demo": "https://nextjs-basic-kappa-eight.vercel.app",
       "github": "https://github.com/Thanhdat013/Nextjs-basic"
     },
     "project-3": {
-      "title": "Trang web cho các câu đố.",
-      "shortDescription": "A website that makes quizzes with many different topics.",
-      "description": "Xây dựng một trang web cho các câu đố đánh giá, nơi người dùng có thể dễ dàng truy cập và lựa chọn từ các chủ đề khác nhau.",
-      "feature_1": "Đăng nhập, đăng ký, lưu dữ liệu người dùng và phân quyền người dùng.",
-      "feature_2": "Quản lý, hiển thị, phân trang tất cả người dùng, thêm, cập nhật và xóa người dùng.",
-      "feature_3": "Quản lý, hiển thị, phân trang tất cả bài quiz, thêm, cập nhật, xóa và gán bài quiz cho người dùng.",
-      "feature_4": "Quản lý, hiển thị, thêm, cập nhật và xóa câu hỏi, câu tả lời với bài quiz tương ứng.",
-      "feature_5": "Chức năng làm bài quiz có tính giờ, hiển thị đáp án, số lượng câu trả lời chính xác sau khi lam bài quiz",
-      "feature_6": "Tùy chọn ngôn ngữ tiếng Anh và tiếng Việt.",
-      "feature_7": "Responsive: hỗ trợ trên nhiều màn hình.",
-      "frontend": "React.Js (Javascript), Redux, Bootstrap.",
-      "backend": "Node.js, Docker.",
+      "title": "Trang web về hồ sơ cá nhân của mình.",
+      "shortDescription": "Một trang web giới thiệu thông tin bản thân của mình.",
+      "description": "Xây dựng một trang web giới thiệu thông tin của bản thân mình, với các thông tin cá nhân, các dự án đã làm và phương thức liên lạc.",
+      "feature_1": "Hiển thị các thông tin và phương thức liên lạc cá nhân của bản thân.",
+      "feature_2": "Tải hồ sở ứng tuyển cá nhân.",
+      "feature_3": "Thông tin các dự án đã làm và đường dẫn liên kết",
+      "feature_4": "Tùy chọn ngôn ngữ tiếng Anh và tiếng Việt",
+      "feature_5": "Responsive: hỗ trợ trên nhiều màn hình.",
+      "frontend": "React.Js (Typescript), SCSS, Antd.",
+      "backend": "Không",
       "role": "Nhà phát triển.",
-      "demo": "",
-      "github": "https://github.com/Thanhdat013/React_Quiz-test"
+      "demo": "https://portfolio-resume-thanhdat.vercel.app",
+      "github": "https://github.com/Thanhdat013/Portfolio_Resume_Thanhdat"
     }
   },
 
   "contact": {
     "heading": "Liên hệ ",
-    "title": "Liên hệ với tôi",
+    "title": "Liên hệ với mình",
     "linkedin": "Linkedin:",
     "myLinkedin": "www.linkedin.com/in/Thanhdat",
     "email": "Thư điện tử:",
