add link demo Project 2

--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -98,7 +98,7 @@
       "frontend": "React.Js (Javascript), Redux Toolkit, Tailwind.",
       "backend": "Firebase",
       "role": "Nhà phát triển.",
-      "demo": "https://food-delivery-git-main-thanhdat013.vercel.app",
+      "demo": "https://food-delivery-reactjs-three.vercel.app/",
       "github": "https://github.com/Thanhdat013/Food_delivery"
     },
     "project-3": {
