change link my linkedin

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -121,7 +121,7 @@
     "heading": "Contact",
     "title": "Contact Me",
     "linkedin": "Linkedin:",
-    "myLinkedin": "www.linkedin.com/in/Thanhdat",
+    "myLinkedin": "www.linkedin.com/in/thanhdat13",
     "email": "Email:",
     "myEmail": "kimthanhdat0510@gmail.com",
     "phone": "Phone:",
