--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -121,7 +121,7 @@
     "heading": "Liên hệ ",
     "title": "Liên hệ với mình",
     "linkedin": "Linkedin:",
-    "myLinkedin": "www.linkedin.com/in/Thanhdat",
+    "myLinkedin": "www.linkedin.com/in/thanhdat13",
     "email": "Thư điện tử:",
     "myEmail": "kimthanhdat0510@gmail.com",
     "phone": "Điện thoại:",
