add my Cv and edit About component

--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -17,9 +17,9 @@
     "desc": "Chào mọi người...Mình là ",
     "intro-1": "Xin chào, mình tên là",
     "subIntro-1": "Thành Đạt",
-    "intro1-1": ". Mình vốn là một kỹ sư điện lạnh của trường Đại học Bách khoa, nhưng mình có niềm đam mê lập trình nên mình muốn theo đuổi con đường mà mình yêu thích.",
-    "intro-2": "Mình được biết đến như một nhân viên giao tiếp tốt và định hướng chi tiết. Mình không bao giờ trễ deadline và có thể đảm nhận nhiều nhiệm vụ cùng một lúc. Mình có khả năng làm việc độc lập cũng như làm việc nhóm hiệu quả. Sở thích của mình là đọc sách, viết code, chơi bóng đá và nghe nhạc. Đôi khi mình thích ra ngoài uống rượu với đồng nghiệp của mình ^^.",
-    "intro-3": "Hiện tại, mình không có nhiều kinh nghiệm, vì vậy mình muốn ứng tuyển vào vị trí Intern/Fresher Frontend mới hơn để khám phá các khía cạnh mới và để phát triển hơn nữa các kỹ năng của mình. Mục tiêu ngắn hạn của mình là mình muốn trở thành một phần của nhóm Frontend, để xây dựng các sản phẩm có thể thể hiện kỹ năng của mình, phát triển sự nghiệp và mục tiêu dài hạn của mình  là trở thành Senior Frontend cấp cao.",
+    "intro1-1": "Mình vốn là một kỹ sư chuyên ngành Máy và thiết bị lạnh của trường Đại học Bách khoa. Sau khoảng thời gian 2 năm rưỡi làm việc tại công ty Cổ phần TC1 thì mình cảm thấy không thể tiếp tục được nữa do mình có niềm đam mê lập trình nên mình muốn theo đuổi lại con đường mà mình yêu thích.",
+    "intro-2": "Mình được biết đến như một người có giao tiếp tốt và định hướng rõ ràng. Mình không bao giờ trễ deadline và có thể đảm nhận nhiều nhiệm vụ cùng một lúc. Mình có khả năng làm việc độc lập cũng như làm việc nhóm hiệu quả. Mình là người có tinh thần ham học hỏi, sẵn sàng tăng ca khi công ty yêu cầu và có thể gắn bó lâu dài với công ty. Sở thích của mình là đọc sách, viết code, chơi bóng đá và nghe nhạc. Đôi khi mình thích ra ngoài uống rượu với đồng nghiệp của mình ^^.",
+    "intro-3": "Hiện tại, mình không có nhiều kinh nghiệm, vì vậy mình muốn ứng tuyển vào vị trí lập trình viên Intern/Fresher Frontend để khám phá các khía cạnh mới và để phát triển hơn nữa các kỹ năng của mình. Mục tiêu ngắn hạn của mình là mình muốn trở thành một phần của nhóm Frontend, để xây dựng các sản phẩm có thể thể hiện kỹ năng của mình, phát triển sự nghiệp và mục tiêu dài hạn của mình là trở thành một lập trình viên Fullstack .",
     "intro-4": "Đó là phần giới thiệu của mình. Cảm ơn vì đã đọc.",
     "name": "Họ và tên:",
     "myName": "Kim Thành Đạt",
@@ -40,9 +40,9 @@
     "frontendSkill-1": "Có khả năng thiết kế và phát triển web responsive theo mẫu.",
     "frontendSkill-2": "Thành thạo HTML, CSS (SCSS).",
     "frontendSkill-3": "Ngôn ngữ lập trình: Javascript, Typescript.",
-    "frontendSkill-4": " Framework/Library: React.js, Next.js,Bootstrap,Tailwind, Antd.",
+    "frontendSkill-4": " Framework/Library: React.js, Next.js, Bootstrap, Tailwind, Antd.",
     "backendSkill": "Kỹ năng Back-end ",
-    "backendSkill-1": "Có hiểu biết về Docker, mySql, RESTful APIs.",
+    "backendSkill-1": "Có hiểu biết về Firebase, mySql, RESTful APIs.",
     "otherSkill": "Các kỹ năng khác",
     "otherSkill-1": "Sử dụng thành thạo công cụ quản lý mã nguồn: GIT.",
     "otherSkill-2": "Khả năng học hỏi và áp dụng công nghệ mới.",
