--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,8 +17,8 @@
     "desc": " Hi there...I'm a ",
     "intro-1": "Hi, my name is",
     "subIntro-1": "Thanh Dat",
-    "intro1-1": ". I was originally a refrigeration engineer from University of Science and Technology, but I have a passion for programming so I want to pursue the path that I love.",
-    "intro-2": "I'm known as a detail-oriented and good communicator employee. I never miss deadlines and can take multiple tasks at once.I have the ability to work independently as well as effectively in a team. My hobbies are reading book, coding, play soccer and listening to music. Sometimes I like to go out drinking with my colleagues.",
+    "intro1-1": ".I was an engineer Heat Engineering and Refrigeration from Ha Noi University of Science and Technology. After working for 2 and a half years at TC1 Joint Stock Company, I feel that I cannot continue because I have a passion for programming so I want to pursue the path that I love.",
+    "intro-2": "I'm known as a detail-oriented and good communicator employee. I never miss deadlines and can take multiple tasks at once.I have the ability to work independently as well as effectively in a team.I am an inquisitive person, willing to work overtime when the company requires and can stick with the company for a long time. My hobbies are reading book, coding, play soccer and listening to music. Sometimes I like to go out drinking with my colleagues.",
     "intro-3": "Right now I don't have much experience, so I would like to apply for the position of intern/fresher Frontend Developer to explore new dimensions and for the further development of my skills. My short term goal is that I  want to be a part of a Frontend team, to build products that can show my skills, grow my career and my long term goal is to be a Senior Frontend Developer.",
     "intro-4": "That's my introduction. Thanks for reading.",
     "name": "Full name:",
@@ -42,7 +42,7 @@
     "frontendSkill-3": "Programming language: Javascript, Typescript.",
     "frontendSkill-4": "Framework/Library: React.js, Next.js, Bootstrap, Tailwind, Antd.",
     "backendSkill": "Back-end skills",
-    "backendSkill-1": "Knowledge of Docker, mySql, RESTful APIs.",
+    "backendSkill-1": "Knowledge of Firebase, mySql, RESTful APIs.",
     "otherSkill": "Other skills",
     "otherSkill-1": "Proficient use of source code management tools: GIT.",
     "otherSkill-2": "Ability to learn and apply new technology.",
