--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -17,9 +17,9 @@
     "desc": "Chào mọi người...Mình là ",
     "intro-1": "Xin chào, mình tên là",
     "subIntro-1": "Thành Đạt",
-    "intro1-1": "Mình vốn là một kỹ sư chuyên ngành Máy và thiết bị lạnh của trường Đại học Bách khoa. Sau khoảng thời gian 2 năm rưỡi làm việc tại công ty Cổ phần TC1 thì mình cảm thấy không thể tiếp tục được nữa do mình có niềm đam mê lập trình nên mình muốn theo đuổi lại con đường mà mình yêu thích.",
+    "intro1-1": ". Mình vốn là một kỹ sư chuyên ngành Máy và thiết bị lạnh của trường Đại học Bách khoa. Sau khoảng thời gian 2 năm rưỡi làm việc tại công ty Cổ phần TC1 thì mình cảm thấy không thể tiếp tục được nữa do mình có niềm đam mê lập trình nên mình muốn theo đuổi lại con đường mà mình yêu thích.",
     "intro-2": "Mình được biết đến như một người có giao tiếp tốt và định hướng rõ ràng. Mình không bao giờ trễ deadline và có thể đảm nhận nhiều nhiệm vụ cùng một lúc. Mình có khả năng làm việc độc lập cũng như làm việc nhóm hiệu quả. Mình là người có tinh thần ham học hỏi, sẵn sàng tăng ca khi công ty yêu cầu và có thể gắn bó lâu dài với công ty. Sở thích của mình là đọc sách, viết code, chơi bóng đá và nghe nhạc. Đôi khi mình thích ra ngoài uống rượu với đồng nghiệp của mình ^^.",
-    "intro-3": "Hiện tại, mình không có nhiều kinh nghiệm, vì vậy mình muốn ứng tuyển vào vị trí lập trình viên Intern/Fresher Frontend để khám phá các khía cạnh mới và để phát triển hơn nữa các kỹ năng của mình. Mục tiêu ngắn hạn của mình là mình muốn trở thành một phần của nhóm Frontend, để xây dựng các sản phẩm có thể thể hiện kỹ năng của mình, phát triển sự nghiệp và mục tiêu dài hạn của mình là trở thành một lập trình viên Fullstack .",
+    "intro-3": "Hiện tại, mình không có nhiều kinh nghiệm, vì vậy mình muốn ứng tuyển vào vị trí lập trình viên Intern/Fresher Frontend để phát triển hơn nữa các kỹ năng của mình. Mục tiêu ngắn hạn của mình là mình muốn trở thành một phần của nhóm Frontend, để xây dựng các sản phẩm có thể thể hiện kỹ năng của mình, phát triển sự nghiệp và mục tiêu dài hạn của mình là trở thành một lập trình viên Fullstack .",
     "intro-4": "Đó là phần giới thiệu của mình. Cảm ơn vì đã đọc.",
     "name": "Họ và tên:",
     "myName": "Kim Thành Đạt",
@@ -27,7 +27,7 @@
     "myBirthday": "24.05.1997",
     "gender": "Giới tính:",
     "myGender": "Nam",
-    "email": "Email:",
+    "email": "Thư điện tử:",
     "myEmail": "kimthanhdat0510@gmail.com",
     "github": "Github:",
     "myGithub": "github.com/Thanhdat013",
